[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/admin/audit_log_row.gd" id="1"]

[node name="AuditLogRow" type="HBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="IconLabel" type="Label" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(24, 0)
horizontal_alignment = 1

[node name="UserLabel" type="Label" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
theme_override_colors/font_color = Color(0.702, 0.733, 0.776, 1)
text_overrun_behavior = 3

[node name="ActionLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="TargetLabel" type="Label" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
text_overrun_behavior = 3

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
horizontal_alignment = 2
text_overrun_behavior = 3
